--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,10 @@ body {
   letter-spacing: 0.03em;
 }
 
+header {
+  border: 1px solid #ececec;
+}
+
 a {
   text-decoration: none;
 }
@@ -45,6 +49,14 @@ a {
   margin-right: auto;
   width: 1200px;
   padding: 0 15px;
+}
+
+.vizually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
 
 /* Шапка */
@@ -399,14 +411,6 @@ a {
 
 /* Наши работы  */
 
-.vizually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-}
-
 .section-workcin {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -417,7 +421,6 @@ a {
 .section-workcin .section-title {
   margin: 0;
   margin-bottom: 4px;
-  margin-left: 24px;
 
   color: var(--primary-text-color);
   font-weight: 700;
@@ -428,8 +431,6 @@ a {
 
 .section-text {
   margin: 0;
-  margin-bottom: 20px;
-  margin-left: 24px;
 
   color: var(--title-text-color);
   font-weight: 400;
@@ -442,16 +443,22 @@ a {
 .pic-box {
   display: flex;
   flex-wrap: wrap;
-  margin: -13px;
+  margin: -15px;
 }
 .pic-flex {
-  margin: 13px;
-
-  box-sizing: border-box;
-  background: #ffffff;
-  border: 1px solid #eeeeee;
+  margin: 15px;
 }
 
 .pic {
-  margin-bottom: 30px;
+  display: block;
+}
+
+.cards {
+  display: block;
+  padding: 20px 24px;
+
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  background: #ffffff;
 }
