--- a/css/styles.css
+++ b/css/styles.css
@@ -266,6 +266,7 @@ a {
 
 .section-command .section-work {
   margin: 0;
+  margin-bottom: 30px;
 
   font-weight: 400;
   font-size: 16px;
@@ -298,10 +299,6 @@ a {
   border-radius: 0px 0px 4px 4px;
 }
 
-.section-work {
-  padding-bottom: 30px;
-}
-
 /* Подвал */
 
 .footer {
@@ -325,7 +322,7 @@ a {
 .nav-link-logo.footer {
   margin: 0px;
   padding-top: 60px;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
   display: inline-block;
 
   color: var(--primary-white-color);
